[package]
name = "pquilt_rs"
version = "0.1.0"
authors = ["Matt Zucker <mzucker1@swarthmore.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"cairo-rs" = { version = "0.9.1", features = ["pdf"] }
"nalgebra" = "0.24"
"error-chain" = "0.12.4"
"phf" = { version = "0.8", features = ["macros"] }


